--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -44,11 +44,10 @@
 .main-hero {
     position: relative;
     width: 100%;
-    height: 700px;
     max-width: 1920px;
     margin: 0 auto;
     overflow: hidden;
-    min-height: 500px;
+    min-height: 700px;
 }
 
 .main-logo {
