--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -235,11 +235,10 @@ body {
 .main-hero {
   position: relative;
   width: 100%;
-  height: 700px;
   max-width: 1920px;
   margin: 0 auto;
   overflow: hidden;
-  min-height: 500px;
+  min-height: 700px;
 }
 
 .main-logo {
@@ -398,21 +397,15 @@ body {
 }
 
 .section-wrapper {
-  padding: 50px;
-  background-color: black;
   position: relative;
   z-index: 9;
-}
-@media (max-width: 640px) {
-  .section-wrapper {
-    padding: 50px 0px;
-  }
+  background: #000000 url(../images/backgrounds/bg-section.jpg) 50% 0;
 }
 
 .section-dusk {
   position: relative;
   width: auto;
-  max-width: 1200px;
+  max-width: 1000px;
   padding: 0 100px 140px;
   margin: 0 auto;
   z-index: 10;
@@ -466,14 +459,14 @@ ul {
   transition: transform 0.450s;
   text-align: center;
   font-size: 15px;
-  padding: 30px 0;
+  padding: 40px 0 20px 0;
   width: 100%;
   left: 50%;
   bottom: 0;
   -webkit-transform: translateX(-50%) translateY(120px);
   -ms-transform: translateX(-50%) translateY(120px);
   transform: translateX(-50%) translateY(120px);
-  background-color: black;
+  background: linear-gradient(transparent, black 50%);
   min-height: 100px;
   z-index: 10;
 }
@@ -482,12 +475,16 @@ ul {
   -ms-transform: translateX(-50%) translateY(0px);
   transform: translateX(-50%) translateY(0px);
   position: absolute;
+  background-color: black;
+  padding: 30px 0;
 }
 .main-footer .main-footer__container {
   position: relative;
   padding-left: 160px;
   width: 400px;
   margin: 0 auto;
+}
+.touch .main-footer .main-footer__container {
   background-color: black;
 }
 .main-footer .main-footer__container .btn-appstore {
